Bug 1163911 - Make responsive images block the document load event while the load task is queued. r=jst